<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.patch.bookinfoapp.presentation.detail.DetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:contentScrim="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_book_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kakao_bg" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/eternal_gray5_a60" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/collapse_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layout_collapseMode="parallax">

                    <com.patch.bookinfoapp.common.view.BookImageView
                        android:id="@+id/iv_book_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="?attr/actionBarSize"
                        app:layout_constraintDimensionRatio="1:1.5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:url="@{viewmodel.book.thumbnail}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:lineSpacingExtra="0dp"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@{viewmodel.book.title}"
                        android:textColor="@color/eternal_gray80"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/iv_book_thumbnail"
                        tools:text="Book Title Here" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_datetime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:lineSpacingExtra="0dp"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/eternal_gray80"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        app:dateTimeText="@{viewmodel.book.datetime}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title"
                        tools:text="Date Time Here" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/ll_detail_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/author_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_authors"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.authors != null}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/author_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="14sp"
                    app:commaText="@{viewmodel.book.authors}"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/translator_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_translator"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{!(viewmodel.book.translators == null || viewmodel.book.translators.size() == 0)}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/translator_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="14sp"
                    app:commaText="@{viewmodel.book.translators}"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contents_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_contents"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{!(viewmodel.book.contents == null || viewmodel.book.contents.length() == 0)}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contents_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:visibilityText="@{viewmodel.book.contents}"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="14sp"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/publisher_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_publisher"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.publisher.length() != 0}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/publisher_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:visibilityText="@{viewmodel.book.publisher}"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="14sp"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/isbn_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_isbn"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.isbn.length() != 0}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/isbn_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:visibilityText="@{viewmodel.book.isbn}"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="16sp"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_price_str"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.price > 0}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{@string/book_price(viewmodel.book.price)}"
                    android:textColor="@color/eternal_gray80"
                    android:textSize="16sp"
                    app:visibleOrGone="@{viewmodel.book.price > 0}"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sale_price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_saleprice"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.salePrice > 0}"
                    tools:text="Title Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sale_price_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{@string/book_sale_price(viewmodel.book.salePrice, viewmodel.book.salePercentage)}"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    app:visibleOrGone="@{viewmodel.book.salePrice > 0}"
                    tools:text="Content Here" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/url_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_url"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:visibleOrGone="@{viewmodel.book.detailUrl.length() != 0}"
                    tools:text="Title Here" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.nick.mowen.linkpreview.view.LinkPreview
                        android:id="@+id/url_linkview"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        app:parsedLink="@{viewmodel.book.detailUrl}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="링크 따라가기"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_dark"
                        app:layout_constraintTop_toTopOf="@+id/url_linkview"
                        app:layout_constraintStart_toStartOf="@+id/url_linkview"
                        app:layout_constraintEnd_toEndOf="@+id/url_linkview"
                        app:layout_constraintBottom_toBottomOf="@+id/url_linkview"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_back_black"
            app:title="">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lineSpacingExtra="0dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@{viewmodel.book.title}"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/v_like"
                    tools:text="Date Time Here" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/v_like"
                    android:layout_width="38dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    app:toggleLike="@{viewmodel.book.isLike}"
                    app:lottie_scale="1"
                    app:lottie_progress="0"
                    app:lottie_fileName="like.json"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>